アイコンやテーマの変更

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -27,7 +27,7 @@ body {
   --color-error: #ffcccc;
   --color-error: #cc2222;
   /** アプリの色 */
-  --accent-color: #00bbee;
+  --accent-color: #00dd5c;
   /** アプリの色に合わせた文字色 */
   --accent-text-color: #ffffff;
   /** デフォルトのボーダー角の大きさ */
