軽いリファクタリング

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,4 +1,5 @@
 @use 'vuetify/styles';
+@use 'sass:map';
 
 $breakpoints: (
   'smartPhone': 'screen and (max-width:900px)',
@@ -12,7 +13,7 @@ $font: 'Zen Maru Gothic', sans-serif;
 /* フォント設定ここまで */
 
 @mixin mq($breakpoint) {
-  @media #{map-get($breakpoints, $breakpoint)} {
+  @media #{map.get($breakpoints, $breakpoint)} {
     @content;
   }
 }
